2015-03-13 Marzo Junior <marzojr@yahoo.com>
	* seventowers/*: Removing robots.txt. Removing downloads from Git. Pointing
	  Keyring and SI Fixes readme links to Git. Adding secondary downloads path
	  and making downlaods merge Exult downloads with Seven Towers downloads.

2015-02-08 Marzo Junior <marzojr@yahoo.com>
	* content/about.dat: Updating information about me.

2015-01-06 Marzo Junior <marzojr@yahoo.com>
	* seventowers/*: Adding in the webpage to project space by request.
	* content/links.dat: Pointing Seven Towers to project space.

2013-02-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated documentation
	* content/download.dat: disabled the official version links for now
	
2011-02-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* content/news.dat: new news 
	* content/download.dat: added all-in-one audio pack + installers
	
2010-10-21 Marzo Junior <marzojr@yahoo.com>
	* content/news.dat: Mention aspect correction, improved Keyring description.

2010-10-21 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* content/news.dat, content/history.dat: move all old news to history
	* content/links.dat: replace reconstruction by aiera; clean up

2010-10-21 Dominik Reichardt <dominus@users.sourceforge.net>
	* content/news.dat: Added news about 1.4.9RC1 
	* content/download.dat: ready for release, removed ancient releases links
	
2010-10-16 Dominik Reichardt <dominus@users.sourceforge.net>
	* content/news.dat: cleaned up, synced with the manual news entry from 2008, moved old news to 
	* content/history.dat
	* intro.dat: new screenshot on our home screen
	*images/screenshots: updated exmenu.png and changed si.png to be a cleaner HQ3x version so 
	  we can link to that on our home screen
	* images/screenshots/thumbs: as above
	
2010-03-10 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation and FAQ
	
2010-03-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* updated Documentation