@@ -1,7 +1,7 @@
 <?php
 	text(
 		array(
-			"This file is a modified form of the Exult Intrinsic Reference, available at " . add_link("http://www.seventowers.org/downloads.php?section=1&page=2", "http://www.seventowers.org/downloads.php?section=1&page=2") . ". This document was generated automatically in the same manner as the aforementioned file. The latest version of this file can be obtained at <http://www.seventowers.org/code.php?TITLE_IMAGE=usecodetitle.png&DATAFILE=exult_intrinsics.dat&TYPE=0&OUTPUT=naturaldocs>.",
+			"This file is a modified form of the Exult Intrinsic Reference, available at " . add_link("http://exult.sourceforge.net/seventowers/downloads.php?section=1&page=2", "http://exult.sourceforge.net/seventowers/downloads.php?section=1&page=2") . ". This document was generated automatically in the same manner as the aforementioned file. The latest version of this file can be obtained at <http://exult.sourceforge.net/seventowers/code.php?TITLE_IMAGE=usecodetitle.png&DATAFILE=exult_intrinsics.dat&TYPE=0&OUTPUT=naturaldocs>.",
 			bold("Authors:") . " Peter M Dodge (twicescorned at gmail dot com; page style, NaturalDocs skeleton for intrinsics) and Marzo Junior (marzojr at yahoo dot com; PHP-page-generation scripts and content)."
 			)
 		);
